tmp/out.txt
HelloWorld.java:5: error: ';' expected
        System.out.println("Hello, World")
                                          ^
1 error
